Add endpoint for listing the scopes the calling app has access to
